# cli-template

./: .dockerignore  .gitignore  .prettierrc  404.html  CHANGELOG.html  CHANGELOG.md  Dockerfile  README.md  RELENG.html  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  README.md  RELENG.md
search/: search_index.js  search_index.json
src/: main.py
src/cli_template/: logger.py  settings.py
src/cli_template/core/: logger.py  settings.py
src/core/: settings.py
test/: conftest.py  test_main.py
